Changelog
=========

1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2014-06-16)
----------------

- Initial release