@@ -3,7 +3,7 @@ from Products.CMFCore.utils import getToolByName
 
 
 def migrate_properties(context, mapping, mode='move', replace=False):
-    """Migrate user properties."""
+    """Migrate user and group properties."""
 
     # Statistics
     moved = []
@@ -13,29 +13,29 @@ def migrate_properties(context, mapping, mode='move', replace=False):
     uf = getToolByName(context, 'acl_users')
     plugin = uf.get('mutable_properties')
 
-    for old_userid, new_userid in mapping.items():
+    for old_id, new_id in mapping.items():
 
-        if old_userid not in plugin._storage:
+        if old_id not in plugin._storage:
             continue
 
-        # Do nothing if new user already has some properties and
+        # Do nothing if new user or group already has some properties and
         # replace is False.
-        if new_userid in plugin._storage and not replace:
+        if new_id in plugin._storage and not replace:
             continue
 
-        data = plugin._storage.get(old_userid)
+        data = plugin._storage.get(old_id)
 
         if mode in ['copy', 'move']:
-            plugin._storage[new_userid] = deepcopy(data)
+            plugin._storage[new_id] = deepcopy(data)
 
         if mode in ['move', 'delete']:
-            plugin.deleteUser(old_userid)
+            plugin.deleteUser(old_id)
 
         if mode == 'move':
-            moved.append((old_userid, new_userid))
+            moved.append((old_id, new_id))
         if mode == 'copy':
-            copied.append((old_userid, new_userid))
+            copied.append((old_id, new_id))
         if mode == 'delete':
-            deleted.append((old_userid, None))
+            deleted.append((old_id, None))
 
     return(dict(moved=moved, copied=copied, deleted=deleted))
